--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - bundle exec rake db:create
   - bundle exec rake db:migrate
 script:
-  - rubocop
+  - bundle exec rubocop -c .rubocop.yml
   - bundle exec rails spec
