--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_script:
   - bundle exec rake db:create
   - bundle exec rake db:migrate
 script:
+  - pwd
   - bundle exec rubocop -c .rubocop.yml
   - bundle exec rails spec
