--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
    - 'script/**/*'
    - 'bundle_bin/*'
    - 'bin/*'
+   - 'tmp/*'
+   - 'vendor/**/*'
 
 Style/AlignParameters:
   EnforcedStyle: with_fixed_indentation
