update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ rvm:
 service:
   - mysql
 before_script:
-  - bundle exec rake db:create
-  - bundle exec rake db:migrate
+  - bundle exec rails db:create
+  - bundle exec rails db:migrate
 script:
   - ls
   - bundle exec rubocop -c .rubocop.yml
