--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,21 @@
 /coverage
 /vendor/bundle
 !.envrc
+
+/config/secrets.yml
+/config/database.yml
+
+
+/.bundle
+/vendor/bundler/
+/log/*.log
+/tmp
+/uploads/tmp/
+/config/settings.local.yml
+/config/settings/*.local.yml
+/config/environments/*.local.yml
+/config/secrets.yml
+/config/database.yml
+
+.pryrc
+.DS_Store
