--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,9 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
   pool: 5
   timeout: 5000
 
