--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,14 @@ rvm:
 service:
 - mysql
 before_script:
+- |
+  echo -e "[mysqld]
+  character_set_server=utf8mb4
+  collation_server=utf8mb4_unicode_ci
+  innodb_large_prefix=ON
+  innodb_file_format=Barracuda
+  innodb_file_format_max=Barracuda" | sudo tee /etc/mysql/conf.d/travis.cnf
+- sudo /etc/init.d/mysql restart
 - bundle exec rails db:create
 - bundle exec rails db:migrate
 script:
