--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: ruby
+dist: trusty
+sudo: required
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
 rvm:
 - 2.4.1
 - 2.4.0
